improved accessibility/fixed inconsistent alignment and transitions

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2163,19 +2163,19 @@ body.is-preload #bg:before {
 	-ms-transition-delay: 0.3s;
 	transition-delay: 0.3s;
 	-moz-transition:
-		max-height 25s ease,
+		max-height 3s ease,
 		padding 1.5s ease,
 		opacity 1.75s ease 0.5s;
 	-webkit-transition:
-		max-height 25s ease,
+		max-height 3s ease,
 		padding 1.5s ease,
 		opacity 1.75s ease 0.5s;
 	-ms-transition:
-		max-height 25s ease,
+		max-height 3s ease,
 		padding 1.5s ease,
 		opacity 1.75s ease 0.5s;
 	transition:
-		max-height 25s ease,
+		max-height 3s ease,
 		padding 1.5s ease,
 		opacity 1.75s ease 0.5s;
 
